[CIVIC-1022] Fixed secondary logo squashed for inline variant.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/logo/logo.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/logo/logo.scss
@@ -21,6 +21,12 @@
     #{$root}-type-inline {
       display: inline-flex;
 
+      &#{$root}-dual {
+        img {
+          width: 50%;
+        }
+      }
+
       a {
         display: inline-flex;
       }
@@ -44,6 +50,12 @@
 
     #{$root}-type-inline {
       display: inline-flex;
+
+      &#{$root}-dual {
+        img {
+          width: 50%;
+        }
+      }
 
       a {
         display: inline-flex;
